	- Support journals ($LogFile) with only one restart page as well as
          journals with two different restart pages.  (Anton, Szaka)
	- Add @val parameter to ntfs_attr_add and @val and @size parameters to
	  ntfs_resident_attr_record_add.  (Yura)
	- Fix attribute list adding for always resident attributes.  (Yura)
	- New API for hard link creating: dir.[ch]::ntfs_link.  (Yura)

08/08/2005 - 1.11.2 - ntfsdecrypt now works and lots of fixes and improvements.

	- ntfsls: Fix display of non-system files whose name begins with the
	  '$' character.  (Yura)
	- Move ntfs2utc and utc2ntfs from utils.[ch] to ntfstime.h.  (Yura,
	  Anton)
	- Add [acm]time fields to struct ntfs_inode and set them during
	  ntfs_inode_open().  Update ntfsmount to use them.  (Yura)
	- index.c::ntfs_index_lookup(): Fix bug when index context did not
	  point to the index root in which the entry located.  (Yura)
	- ntfsresize: relocate_attributes(): Do not stop processing MFT record
	  attributes at AT_DATA of $BadClus and $Bitmap.  In practice, there
	  are no non-resident attributes after them so this is a bug which was
	  introduced in 1.11.0 which should not have caused data loss.  (Szaka)
	- ntfsresize: Support relocation of $MFT with $ATTRIBUTE_LIST.  (Szaka)
	- ntfsresize: Support resizing into the middle of a $MFT $DATA
	  extent. (Szaka)
	- ntfscp: Fix attribute name parsing bug introduced in 1.10.0.  (Yura)
	- ntfsinfo: Dump more information about indexes.  (Yura)
	- Fix unistr.c::ntfs_mbstoucs() on systems with utf8 locale.  (Yura)
	- Change errno and print more verbose message in the case of a failing
	  logfile check.  (Yura)
	- Fix random errno returned by ntfs_inode_open() if the MFT record  was
	  not in use.  (Szaka)
	- Fix ntfs_attr_p{read,write}() to not return less bytes if trapped on
	  unmapped runlist region.  (Yura)
	- Make find work correctly on volumes mounted by ntfsmount.  (Yura)
	- Replaced all occurances of ENOTSUP with EOPNOTSUPP to be in better