@@ -49,6 +49,8 @@ xx/xx/2005 - 1.12.0-WIP
 	  ntfs_resident_attr_record_add.  (Yura)
 	- Fix attribute list adding for always resident attributes.  (Yura)
 	- New API for hard link creating: dir.[ch]::ntfs_link.  (Yura)
+	- ntfsresize: emphasize that disk partitioning must use sector as the
+	  unit instead of cylinder to avoid shifting of the partition.  (Szaka)
 
 08/08/2005 - 1.11.2 - ntfsdecrypt now works and lots of fixes and improvements.
 
